kubernetes/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  annotations:
    app.gitlab.com/app: $CI_PROJECT_PATH_SLUG
    app.gitlab.com/env: $CI_ENVIRONMENT_SLUG
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
      annotations:
        app.gitlab.com/app: $CI_PROJECT_PATH_SLUG
        app.gitlab.com/env: $CI_ENVIRONMENT_SLUG
    spec:
      containers:
        - name: redis
          image: redis:6.2.5-alpine
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
spec:
  ports:
    - port: 6379
      name: tcp-6379
  selector:
    app: redis
